// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createProvider method Should create correct component tree without children 1`] = `
<DS.Observer>
  <div>
    testChild
  </div>
</DS.Observer>
`;

exports[`createProvider method Should create correct component tree without children 2`] = `
<DS.Observer>
  <ScopedObserver
    dependencies={
      Array [
        [Function],
      ]
    }
    manager={[Function]}
  >
    <div>
      testChild
    </div>
  </ScopedObserver>
</DS.Observer>
`;

exports[`createProvider method Should create correct component tree without children 3`] = `
<div>
  testChild
</div>
`;

exports[`createProvider method Should create correct component tree without children 4`] = `
<div>
  testChild
</div>
`;

exports[`createProvider method Should render correct component tree 1`] = `
<DS.Observer>
  test
</DS.Observer>
`;

exports[`createProvider method Should render correct component tree 2`] = `
<DS.Observer>
  <ScopedObserver
    dependencies={
      Array [
        [Function],
      ]
    }
    manager={[Function]}
  >
    test
  </ScopedObserver>
</DS.Observer>
`;
